--- a/AvaloniaApplication/AvaloniaApplication.csproj
+++ b/AvaloniaApplication/AvaloniaApplication.csproj
@@ -24,6 +24,7 @@
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+        <PackageReference Include="PixiEditor.ColorPicker.AvaloniaUI" Version="1.0.7" />
     </ItemGroup>
 
     <ItemGroup>
